# memviz-neo

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
bench/: README.md  desktop.mjs  memviz.mjs  package.json  pytorch.mjs  pytorch_annotate.js  pytorch_helpers.js  pytorch_unpickle.js  render.mjs
scripts/: gen_test_data.py
src/memviz_neo/: aggregate.py  categorize.py  cli.py  parser.py  server.py  timeline.py
wasm/: Cargo.toml
wasm/src/: lib.rs  pickle.rs
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/scripts/: inspect-layout.mjs  probe-anomaly.mjs  probe-anomaly2.mjs  snap-anomaly.mjs  snap-badge.mjs  snap-chip.mjs  snap-details.mjs  snap-divider.mjs  snap-divider2.mjs  snap-flame-tab.mjs  snap-float.mjs  snap-gap.mjs  snap-layout.mjs  snap-ranksidebar.mjs  snap-sanity.mjs  snap-scroll.mjs  snap-seg-scale.mjs  snap-shortcuts.mjs  snap-tabs.mjs  snap-tray-behavior.mjs  test-anomaly.mjs  test-event-mode.mjs
web/src/: App.tsx  main.tsx  theme.css  utils.ts
web/src/components/: BottomTray.tsx  FileSelector.tsx  Layout.tsx  TablePager.tsx
web/src/compute/: anomalies.ts  computeWorker.ts  eventTimes.ts  index.ts  layoutWorker.ts  palette.ts  parseRank.ts  parseWorker.ts  stripIndex.ts  wasm.d.ts  workerPool.ts
web/src/hooks/: useContainerWidth.ts  useDragResize.ts  usePersistedNumber.ts
web/src/stores/: dataStore.ts  fileStore.ts  rankStore.ts
web/src/types/: snapshot.ts  timeline.ts
web/src/views/: AddressMap.tsx  AnomalyPanel.tsx  MemoryFlamegraph.tsx  theme.ts  (+8 more)
(+2 files in other folders)
