[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memviz-neo"
version = "0.1.0"
requires-python = ">=3.11"

[tool.hatch.build.targets.wheel]
packages = ["src/memviz_neo"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
