[package]
name = "memviz-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-pickle = "1"
js-sys = "0.3"

# Patched serde-pickle — upstream's ref-count tracking for MEMOIZE/BINGET
# gets out-of-sync on PyTorch memory snapshots with heavily shared frames
# lists, producing None values. See vendor/serde-pickle/src/de.rs.
[patch.crates-io]
serde-pickle = { path = "vendor/serde-pickle" }

[profile.release]
opt-level = "s"
lto = true
